--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,6 +2,8 @@
   "expo": {
     "name": "Be The Hero",
     "slug": "bethehero",
+    "privacy": "public",
+    "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
       "android",
@@ -23,7 +25,6 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
-    "description": ""
+    }
   }
 }
